Update Paper (Discussion) and a new research paper

--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -529,17 +529,17 @@ modelsummary::modelsummary(
 
 # Discussion {#sec-discussion}
 
-We find a positive correlation between mental and physical health, where depression diagnosis strengthens the correlation; on the other hand, we detect a disparity between gender groups, hinting at an association with the fact that females are underrepresented in the medical field.
+For the main anlysis, we find a positive correlation between mental and physical health, where depression diagnosis strengthens the correlation; on the other hand, we detect a disparity between gender groups, hinting at an association with the fact that females are underrepresented in the medical field.
 
 ## Mental Health Issues Impact Physical Health {#sec-first-point}
 
-Corresponding to the results in the journal by @Ohrnberger_Fichera_Sutton, although not strong, the result of the paper supports the positive correlation between mental and physical health status ($\beta_1$ = 0.27, p = .01). The variables that are used for main analysis were only available in years 2002, 2006, 2010, 2014, 2018, and 2022 as mental health is a newly introduced concept in health science compared to physical health, hence the sample size (n = 9049) of our data may not accurately represent U.S. population in past decades. Moreover, mental health education may not be common, and even mistreated as a taboo, in the population at the time, causing individuals to dismiss mental discomfort. The correlation or impact thus could be strengthen by mental health promotions and educations in the future. 
+Corresponding to the results in the journal by @Ohrnberger_Fichera_Sutton, although not strong, the result of the paper supports the positive correlation between mental and physical health status ($\beta_1$ = 0.27, p = .01). Many possible reasons can contribute to the result we have for the paper. The variables that are used for the main analysis were only available in the years 2002, 2006, 2010, 2014, 2018, and 2022 since mental health is a newly introduced concept in health science compared to physical health, hence the sample size (n = 9049) of our data may not accurately represent U.S. population in past decades. Moreover, mental health education may not be common, and even mistreated as a taboo, to the society at the time, causing individuals to dismiss their mental discomfort or issues. Participants might refuse to answer relevant questions because they are afraid of discrimination as those personal health variables could make them vulnerable to social rejection. The correlation or impact thus could be strengthened by mental health promotions and education in the future: having a society that promotes and educates mental health, participants have better knowledge of their own health status and more responses recollecting the accurate status will be available for analysis.
 
-In addition, counted days of feeling physically and mentally unwell might not fully capture an individual's health status for analysis, more relevant factors should be included for future analysis. Due to that reason, a variable capturing respondents' general health status was included for supplementary evidence. A positive correlation between counted days of mental unwellness and general health (@fig-mental-vs-general) was detected to further support our estimand. To elaborate, since the categorical variable is coded reversely (i.e. Excellent - 1 and Poor - 4), we can conclude that as the number of counted mental unwellness increases, the health status of that individual correspondingly worsens.
+In addition, counted days of feeling physically and mentally unwell might not fully capture an individual's health status for analysis, more relevant factors should be included for future analysis. Due to that reason, a variable capturing respondents' general health status was included for supplementary evidence. A positive correlation between counted days of mental unwellness and general health (@fig-mental-vs-general) was detected to further support our estimand. To elaborate, since the categorical variable is coded reversely (i.e. Excellent - 1 and Poor - 4), we can conclude that as the number of counted mental unwellness increases, the health status of that individual correspondingly worsens. Keep in mind that the strength of the correlation is not strong, but the result provides an insight of how mental health issues could influence health in general.
 
 ## Influence by Depression Diagnosis
 
-To support our estimand, an additional variable was added to indicate the respondents' depression diagnosis. From the graph (@fig-mental-vs-physical) and model (@tbl-modelresults) results, depression diagnosis contributes to increase the influence of mental unwellness to physical unwellness. Depression diagnosis, therefore, could be a positive moderator, which strengthens the relation between mental health (independent variable) and physical health (dependent variable). Other than depression diagnosis, other mental health issues have not been specifically speculated for the purpose of this particular study.   
+Research [@Trivedi_the_Link_2004] indicate that physical symptoms frequently accompany depression, with vague aches and pains often being the primary indicators. These symptoms commonly manifest as chronic joint pain, limb discomfort, backaches, gastrointestinal issues, fatigue, sleep disturbances, alterations in psychomotor activity, and changes in appetite. A significant portion of patients initially seek medical attention solely for physical complaints, only to later discover a diagnosis of depression. Reseaches provide an insight that mental health issues are often associated with physical symptoms. Thus, to support our estimand, an additional variable was added to indicate the respondents' depression diagnosis. From the graph (@fig-mental-vs-physical) and model (@tbl-modelresults) results, depression diagnosis contributes to increase the influence of mental unwellness to physical unwellness. Depression diagnosis, therefore, could be a moderator, which strengthens the relation between mental health (independent variable) and physical health (dependent variable). Other than depression diagnosis, no additional mental health issues are speculated for the purpose of this particular study. The result with GSS dataset, alothough not significant, support the fact that depression plays an role in impacting physical health.  
 
 ## Gender Disparity in Health
 
@@ -547,19 +547,16 @@ By comparing counted days of feeling mentally and physically unwell between diff
 
 From the literature review conducted by @Merone_Tsey_Russell_Nagle_2022, women continue to be significantly underrepresented in medical literature, with inadequate reporting and analysis of sex and gender in research and misogynistic perceptions persistently shape the narrative surrounding these issues. The result in this paper again highlights the disparity, reminding us that We still have a long way to acknowledge and solve gender and minority disparity problems in the research field. 
 
-## Weaknesses 
+## Weaknesses and Future Directions
 
 There are many limitations and weakness in the analysis. For instance, counted days of feeling physically and mentally unwell in past 30 days might not fully capture an individual's mental and physical health status; although feeling unwell in a few days, the severity of the unwellness was not measured. An individual could feel seriously unwell physically or mentally, which could as well contribute to a factor for analyzing. On the other hand, no other mental health issues other than depression was being studied in the paper; different kinds of mental health issues could contributes to physical unwellness in different ways, further research could include those variables for a better narrative of the relationship. 
 
-Not enough education on mental health could also influence variables we collected, based on the fact that the variables are collected in a self-report manner. Participants might reported inaccurate information due to not having mental health related knowledge. On the other hand, the disparity in gender and other minority groups could influence the variable validity as those groups are more likely to be underrepresented in medical research. There is still much room of improvements. 
-
-### Model Limitations
+As mentioned before, the variables that are used for the main analysis were only available in the years 2002, 2006, 2010, 2014, 2018, and 2022; the gap between years in the dataset fails to illustrate the trends as its narrative lacks data from the other years. Moreover, not enough education on mental health could also influence the variables we collected, based on the fact that the variables are collected in a self-report manner. Participants might report inaccurate information due to not having mental health-related knowledge. On the other hand, the disparity in gender and other minority groups could influence the variable validity as those groups are more likely to be underrepresented in medical research. There is still much room for improvement. 
 
 Lastly, by posterior predictive check, the posterior distribution indicates that the model is not doing a good job of fitting the data. The check result could be due to limitations of data mentioned above; furthermore, adding more relevant variables to the linear regression equation could as well improve the strength of the model.
 
-## Future Directions 
-
-With existing study and limitations, future studies could be conducted to improve and capture the relationship between mental and physical health more efficiently in the future.
+There are still many mental and physical health factors that we did not touch on to study their relationship in deeper depth. With existing studies and limitations concluded, future studies could be conducted to improve and capture the relationship between mental and physical health more efficiently in the future. 
+ 
 
 \appendix
 
