--- a/paper/references.bib
+++ b/paper/references.bib
@@ -347,3 +347,13 @@
   year={2023}, 
   month={Jun}
 } 
+
+@article{Trivedi_the_Link_2004, 
+    title={The link between depression and physical symptoms}, 
+    volume={6}, 
+    journal={Primary care companion to the Journal of clinical psychiatry}, 
+    author={Madhukar H. Trivedi}, 
+    year={2004}, 
+    pages={12-16}
+  } 
+  
