--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -20,7 +20,7 @@ bibliography: references.bib
 
 #download the packages if necessary, then load the packages
 if (!require("pacman")) install.packages("pacman")
-pacman::p_load(janitor,here,dplyr,tidyverse,knitr,kableExtra,ggplot2,arrow,ggpmisc)
+pacman::p_load(janitor, here, dplyr, tidyverse, knitr, kableExtra, ggplot2, arrow, ggpmisc)
 
 library(janitor)
 library(tidyverse)
@@ -80,8 +80,6 @@ The source data was obtained from the public open website GSS Data Explorer[^1].
 
 The explained data was cleaned by using the open source statistical programming language R [@citeR], with libraries `tidyverse` [@tidyverse], `ggplot2` [@ggplot2], `ggpmisc` [@ggpmisc], `dplyr` [@dplyr], `readr` [@readr], `tibble` [@tibble], `here` [@here], `kableExtra` [@kableExtra], `janitor` [@janitor], `arrow` [@arrow], and `knitr` [@knitr]. Below in @tbl-sub-vars contains a snapshot of the main dataset being used for analysis; two additional histograms (@fig-countedDays) are included as well, illustrating the number of responses for each question. In general, most respondents have only a few or zero days of feeling both physically and mentally unwell in the past 30 days, indicating the population is generally well in mental and physical health. Very few responses were collected that fall in the ranges between 15 days to 20 days, and above 20 days and below 30 days. Remarkably, on the other hand, there are a certain amount of responses reporting 30 days, indicating percentages of participants experiencing high levels of health discomfort. The trends are similar between the two responses.
 
-\break
-
 ```{r}
 #| label: tbl-sub-vars
 #| tbl-cap: Counted days of Mental unwellness with General Health Status
@@ -89,7 +87,7 @@ The explained data was cleaned by using the open source statistical programming 
 #| warning: false
 #| message: false
 
-vars <- c("ID","Physical Unwellness","Mental Unwellness")
+vars <- c("ID", "Physical Unwellness", "Mental Unwellness")
 
 kable(head(days_data), 
       align = "c",
@@ -102,9 +100,8 @@ kable(head(days_data),
 ```{r}
 #| label: fig-countedDays
 #| fig-cap: Histograms for Number of Responses for Each Question
-#| fig-subcap: ["Mental Unwellness","Physical Unwellness"]
+#| fig-subcap: ["Mental Unwellness", "Physical Unwellness"]
 #| layout-ncol: 2
-#| tbl-cap: Number for Each Responses 
 #| echo: false
 #| warning: false
 #| message: false
@@ -154,7 +151,7 @@ Demographic variables such as gender and age are used to compare and contrast di
 #| warning: false
 #| message: false
 
-vars <- c("ID","Gender","Age","Physical Unwellness","Mental Unwellness","Age Cohort")
+vars <- c("ID", "Gender", "Age", "Physical Unwellness", "Mental Unwellness", "Age Cohort")
 
 kable(head(demo_data), 
       align = "c",
@@ -178,15 +175,15 @@ kable(head(demo_data),
 
 genderdata <- filter(demo_data, sex == "Female")
 
-sex <- c("Male","Female","Total")
-numbers <- c(nrow(genderdata), nrow(demo_data)-nrow(genderdata),nrow(demo_data))
+sex <- c("Male", "Female", "Total")
+numbers <- c(nrow(genderdata), nrow(demo_data)-nrow(genderdata), nrow(demo_data))
 female_per <- round(nrow(genderdata)/nrow(demo_data),2) * 100
 
 gendertable <- cbind(sex,numbers)
 kable(gendertable, 
       align = "c",
       row.names = FALSE,
-      col.names = c("Sex","Responses"))
+      col.names = c("Sex", "Responses"))
 
 
 agetable <- count(demo_data, age_cohort)
@@ -195,15 +192,17 @@ agetable <- rbind(agetable,total)
 kable(agetable, 
       align = "c",
       row.names = FALSE,
-      col.names = c("Age Cohort","Responses"))
-age_per <- round(nrow(filter(demo_data,age_cohort == "40-59"))/nrow(demo_data),2) * 100
+      col.names = c("Age Cohort", "Responses"))
+
+age_per <- round(nrow(filter(demo_data,age_cohort == "40-59"))/nrow(demo_data), 2) * 100
 ```
 
 \break
 
 ## Mental and Physical Unwellness and Depression Diagnosis
 
-One of the key variables used for further analysis is whether the respondent has been diagnosed as having depression in the past. The survey used the question "Now I would like to ask you some questions about general health conditions. Has a doctor, nurse, or other health professional EVER told you that you had: D. Depression?" to collect a categorical response of whether "Yes" or "No". The variable is an external indication of respondents' mental health status, accompanying the main counted days variable that is used for the analysis (@tbl-analysis-vars). From @tbl-analysis-depress, about 21% of the participants have been diagnosed as having depression in the past. According to the Morbidity and Mortality Weekly Report from Centers for Diseases Control and Prevention (CDC) in U.S.[@CDControlPrevention_2023], 18.4% of U.S. adults reported having ever been diagnosed with depression during 2020. The percentage in dataset is slightly higher than weekly reports, which could be a result from error, sampling differences, and other factors.
+One of the key variables used for further analysis is whether the respondent has been diagnosed as having depression in the past. The survey used the question "Now I would like to ask you some questions about general health conditions. Has a doctor, nurse, or other health professional EVER told you that you had: D. Depression?" to collect a categorical response of whether "Yes" or "No". The variable is an external indication of respondents' mental health status, accompanying the main counted days variable that is used for the analysis (@tbl-analysis-vars). From @tbl-analysis-depress, about 21% of the participants have been diagnosed as having depression in the past. According to the Morbidity and Mortality Weekly Report from the Centers for Disease Control and Prevention (CDC) in the U.S.[@CDControlPrevention_2023], 18.4% of U.S. adults reported having ever been diagnosed with depression in 2020. The percentage in dataset is slightly higher than weekly reports, which could be a result of error, sampling differences, and other factors.
+
 
 ```{r}
 #| label: tbl-analysis-vars
@@ -212,7 +211,7 @@ One of the key variables used for further analysis is whether the respondent has
 #| warning: false
 #| message: false
 
-vars <- c("ID","Physical Unwellness","Mental Unwellness","Depression Diagnosis")
+vars <- c("ID", "Physical Unwellness", "Mental Unwellness", "Depression Diagnosis")
 
 kable(head(analysis_data), 
       align = "c",
@@ -220,7 +219,7 @@ kable(head(analysis_data),
       row.names = FALSE) |>
   kable_styling(latex_options = c("striped", "hold_position"), bootstrap_options = "striped", full_width = FALSE)
 
-per <- round(count(filter(analysis_data,depress=="Yes")) / count(analysis_data), 2) * 100
+per <- round(count(filter(analysis_data, depress=="Yes")) / count(analysis_data), 2) * 100
 
 ```
 \break
@@ -233,7 +232,7 @@ per <- round(count(filter(analysis_data,depress=="Yes")) / count(analysis_data),
 
 depresstable <- count(analysis_data, depress)
 total <- c("Total",nrow(analysis_data))
-depresstable <- rbind(depresstable ,total)
+depresstable <- rbind(depresstable, total)
 kable(depresstable, 
       align = "c",
       row.names = FALSE,
@@ -242,7 +241,7 @@ kable(depresstable,
 
 ## Mental Unwellness and General Health Status
 
-A variable collecting general health status is furthermore included for additional analyses (@tbl-health-vars). The variable is used as a supplementary tool indicating respondents' health in general to assist the analysis result. The question consists of four categorical responses asking the respondents: "Would you say your own health, in general, is excellent, good, fair, or poor?" The respondents are expected to choose one of the options to answer. In @tbl-health-rep, number of occurrences for each responses are counted. Majority of the repspondents reported to have good (51%) or excellent (29%) health status.
+A variable collecting general health status is furthermore included for additional analyses (@tbl-health-vars). The variable is used as a supplementary tool indicating respondents' health in general to assist the analysis result. The question consists of four categorical responses asking the respondents: "Would you say your own health, in general, is excellent, good, fair, or poor?" The respondents are expected to choose one of the options to answer. In @tbl-health-rep, the number of occurrences for each response is counted. The majority of the respondents reported to have good (51%) or excellent (29%) health status.
 
 ```{r}
 #| label: tbl-health-vars
@@ -254,7 +253,7 @@ A variable collecting general health status is furthermore included for addition
 per_good <- round(nrow(filter(mentalVsHealth, health == 2))/nrow(mentalVsHealth),2) * 100
 per_exc <- round(nrow(filter(mentalVsHealth, health == 1))/nrow(mentalVsHealth),2) * 100
 
-vars <- c("ID","Mental Unwellness","General Health")
+vars <- c("ID", "Mental Unwellness", "General Health")
 kable(head(mentalVsHealth), 
       align = "c",
       col.names = vars,
@@ -270,8 +269,8 @@ kable(head(mentalVsHealth),
 #| warning: false
 #| message: false
 healthtable <- count(mentalVsHealth, health)
-total <- c("Total",nrow(mentalVsHealth))
-healthtable <- rbind(healthtable ,total)
+total <- c("Total", nrow(mentalVsHealth))
+healthtable <- rbind(healthtable, total)
 status <- data.frame(c("Excellent", "Good", "Fair", "Poor","Total"))
 colnames(status) <- c("Health Status")
 healthtable <- cbind(status, healthtable)
@@ -289,7 +288,7 @@ The GSS's approach to managing non-responses underwent changes, notably in its r
 
 However, with the introduction of web-based surveys, new categories like "Skipped on Web" were introduced to categorize non-responses. This change raises questions about the comparability of data across years and the potential for increased non-response rates. Non-responses (@fig-nonresponse-rate) can significantly affect the analysis of physical and mental health status trends, particularly in capturing the full extent of respondents' health status. Furthermore, mental health is a later introduced science compared to physical health and thus is not included in most of the previous surveys. Although survey data lack mental health-related questions filtered out for analyses, it is important to consider that fact. 
 
-As shown in @fig-nonresponse-rate, some of the questions in the dataset are not included resulting in no responses collected in certain years due to the change in survey methodology. This fact requires extra attention when cleaning and handling since the number of available responses will decrease when additional variables are added. Hence, an additional sub-set of the data that only includes counted days of mental and physical un-wellness in the past 30 days (@tbl-sub-vars) is also included for only speculating these two variables while keeping as many responses as possible. 
+As shown in @fig-nonresponse-rate, some of the questions in the dataset are not included resulting in no responses collected in certain years due to the change in survey methodology. This fact requires extra attention when cleaning and handling since the number of available responses will decrease when additional variables are added. Hence, an additional subset of the data that only includes counted days of mental and physical un-wellness in the past 30 days (@tbl-sub-vars) is also included for only speculating these two variables while keeping as many responses as possible. 
 
 ```{r}
 #| label: fig-nonresponse-rate
@@ -302,17 +301,17 @@ As shown in @fig-nonresponse-rate, some of the questions in the dataset are not 
 no_response_data <- rep(0,3)
 
 #length(which(<condition>)) code referenced from https://www.geeksforgeeks.org/count-repeated-values-in-r/
-no_response_data <- c(length(which(GSS$phys_days<1)),length(which(GSS$ment_days<1)),length(which(GSS$depress<1)))
+no_response_data <- c(length(which(GSS$phys_days<1)), length(which(GSS$ment_days<1)), length(which(GSS$depress<1)))
 
 # calculate the percentages
 total_responses <- nrow(GSS)
 non_response_rate <- no_response_data/total_responses 
-non_response_rate <- round(non_response_rate,3)
-questions <- c("Physical Unwellness","Mental Unwellness","Depression Status")
-non_response_data <- cbind(questions,non_response_rate)
+non_response_rate <- round(non_response_rate, 3)
+questions <- c("Physical Unwellness", "Mental Unwellness", "Depression Status")
+non_response_data <- cbind(questions, non_response_rate)
   
-ggplot(non_response_data, aes(x = questions,y=non_response_rate)) +
-  geom_bar(stat = "identity",fill = "skyblue") +
+ggplot(non_response_data, aes(x = questions, y=non_response_rate)) +
+  geom_bar(stat = "identity", fill = "skyblue") +
   theme_minimal() +
   labs(x = "Questions", y = "Proportion of Non-Responses") 
 
@@ -375,8 +374,8 @@ demo_data <- within(demo_data, {
 
 ```{r}
 #| label: fig-demo-mental
-#| fig-cap: Female Participants from 20 to 39 Years Old are More likely to Experience Mental Unwellness 
-#| fig-subcap: ["Gender","Age cohorts"]
+#| fig-cap: Female Participants from 20 to 39 Years Old are More Likely to Experience Mental Unwellness 
+#| fig-subcap: ["Gender", "Age cohorts"]
 #| layout-ncol: 2
 #| echo: false
 #| warning: false
@@ -409,8 +408,8 @@ demo_data |>
 
 ```{r}
 #| label: fig-demo-physical
-#| fig-cap: Female Participants from 40 to 59 Years Old are More likely to Experience Physical Unwellness 
-#| fig-subcap: ["Gender","Age cohorts"]
+#| fig-cap: Female Participants from 40 to 59 Years Old are More Likely to Experience Physical Unwellness 
+#| fig-subcap: ["Gender", "Age cohorts"]
 #| layout-ncol: 2
 #| echo: false
 #| warning: false
@@ -529,34 +528,33 @@ modelsummary::modelsummary(
 
 # Discussion {#sec-discussion}
 
-For the main anlysis, we find a positive correlation between mental and physical health, where depression diagnosis strengthens the correlation; on the other hand, we detect a disparity between gender groups, hinting at an association with the fact that females are underrepresented in the medical field.
+For the main analysis, we find a positive correlation between mental and physical health, where depression diagnosis strengthens the correlation; on the other hand, we detect a disparity between gender groups, hinting at an association with the fact that females are underrepresented in the medical field.
 
 ## Mental Health Issues Impact Physical Health {#sec-first-point}
 
 Corresponding to the results in the journal by @Ohrnberger_Fichera_Sutton, although not strong, the result of the paper supports the positive correlation between mental and physical health status ($\beta_1$ = 0.27, p = .01). Many possible reasons can contribute to the result we have for the paper. The variables that are used for the main analysis were only available in the years 2002, 2006, 2010, 2014, 2018, and 2022 since mental health is a newly introduced concept in health science compared to physical health, hence the sample size (n = 9049) of our data may not accurately represent U.S. population in past decades. Moreover, mental health education may not be common, and even mistreated as a taboo, to the society at the time, causing individuals to dismiss their mental discomfort or issues. Participants might refuse to answer relevant questions because they are afraid of discrimination as those personal health variables could make them vulnerable to social rejection. The correlation or impact thus could be strengthened by mental health promotions and education in the future: having a society that promotes and educates mental health, participants have better knowledge of their own health status and more responses recollecting the accurate status will be available for analysis.
 
-In addition, counted days of feeling physically and mentally unwell might not fully capture an individual's health status for analysis, more relevant factors should be included for future analysis. Due to that reason, a variable capturing respondents' general health status was included for supplementary evidence. A positive correlation between counted days of mental unwellness and general health (@fig-mental-vs-general) was detected to further support our estimand. To elaborate, since the categorical variable is coded reversely (i.e. Excellent - 1 and Poor - 4), we can conclude that as the number of counted mental unwellness increases, the health status of that individual correspondingly worsens. Keep in mind that the strength of the correlation is not strong, but the result provides an insight of how mental health issues could influence health in general.
+In addition, counted days of feeling physically and mentally unwell might not fully capture an individual's health status for analysis, more relevant factors should be included for future analysis. Due to that reason, a variable capturing respondents' general health status was included for supplementary evidence. A positive correlation between counted days of mental unwellness and general health (@fig-mental-vs-general) was detected to further support our estimand. To elaborate, since the categorical variable is coded reversely (i.e. Excellent - 1 and Poor - 4), we can conclude that as the number of counted mental unwellness increases, the health status of that individual correspondingly worsens. Keep in mind that the strength of the correlation is not strong, but the result provides insight into how mental health issues could influence health in general.
 
 ## Influence by Depression Diagnosis
 
-Research [@Trivedi_the_Link_2004] indicate that physical symptoms frequently accompany depression, with vague aches and pains often being the primary indicators. These symptoms commonly manifest as chronic joint pain, limb discomfort, backaches, gastrointestinal issues, fatigue, sleep disturbances, alterations in psychomotor activity, and changes in appetite. A significant portion of patients initially seek medical attention solely for physical complaints, only to later discover a diagnosis of depression. Reseaches provide an insight that mental health issues are often associated with physical symptoms. Thus, to support our estimand, an additional variable was added to indicate the respondents' depression diagnosis. From the graph (@fig-mental-vs-physical) and model (@tbl-modelresults) results, depression diagnosis contributes to increase the influence of mental unwellness to physical unwellness. Depression diagnosis, therefore, could be a moderator, which strengthens the relation between mental health (independent variable) and physical health (dependent variable). Other than depression diagnosis, no additional mental health issues are speculated for the purpose of this particular study. The result with GSS dataset, alothough not significant, support the fact that depression plays an role in impacting physical health.  
+Research [@Trivedi_the_Link_2004] indicates that physical symptoms frequently accompany depression, with vague aches and pains often being the primary indicators. These symptoms commonly manifest as chronic joint pain, limb discomfort, backaches, gastrointestinal issues, fatigue, sleep disturbances, alterations in psychomotor activity, and changes in appetite. A significant portion of patients initially seek medical attention solely for physical complaints, only to later discover a diagnosis of depression. Research provides an insight that mental health issues are often associated with physical symptoms. Thus, to support our estimand, an additional variable was added to indicate the respondents' depression diagnosis. From the graph (@fig-mental-vs-physical) and model (@tbl-modelresults) results, depression diagnosis contributes to increasing the influence of mental unwellness to physical unwellness. Depression diagnosis, therefore, could be a moderator, which strengthens the relation between mental health (independent variable) and physical health (dependent variable). Other than depression diagnosis, no additional mental health issues are speculated for the purpose of this particular study. The result with the GSS dataset, although not significant, supports the fact that depression plays a role in impacting physical health.
 
 ## Gender Disparity in Health
+By comparing counted days of feeling mentally and physically unwell between different gender groups, we found that female respondents in general reported higher numbers of occasions feeling unwell (@fig-demo-mental and @fig-demo-physical). The trend could be a result of gender disparity in the medical field, where women benefit less from medical research and advances because they are underrepresented as potential patients. The gender disparity in medical research, compounded by pervasive misogyny, translates into tangible disadvantages for female patients in real-world scenarios. 
 
-By comparing counted days of feeling mentally and physically unwell between different gender groups, we found that female respondents in general reported higher numbers of occasions feeling unwell (@fig-demo-mental and @fig-demo-physical). The trend could be a result of gender disparity in medical field, where women benefit less from medical research and advances because they are underrepresented as potential patients. The gender disparity in medical research, compounded by pervasive misogyny, translates into tangible disadvantages for female patients in real-world scenarios. 
-
-From the literature review conducted by @Merone_Tsey_Russell_Nagle_2022, women continue to be significantly underrepresented in medical literature, with inadequate reporting and analysis of sex and gender in research and misogynistic perceptions persistently shape the narrative surrounding these issues. The result in this paper again highlights the disparity, reminding us that We still have a long way to acknowledge and solve gender and minority disparity problems in the research field. 
+From the literature review conducted by @Merone_Tsey_Russell_Nagle_2022, women continue to be significantly underrepresented in medical literature, with inadequate reporting and analysis of sex and gender in research and misogynistic perceptions persistently shaping the narrative surrounding these issues. Medical services based on a lack of representative research make diagnoses for diseases and treatments inconvenient, inaccurate, and challenging. The experiences with the medical system could be one of the reasons contributing to female participants reporting higher occurrences of feeling both mentally and physically unwell. The result in this paper again highlights the disparity, reminding us that We still have a long way to acknowledge and solve gender and minority disparity problems in the research field. 
 
 ## Weaknesses and Future Directions
 
-There are many limitations and weakness in the analysis. For instance, counted days of feeling physically and mentally unwell in past 30 days might not fully capture an individual's mental and physical health status; although feeling unwell in a few days, the severity of the unwellness was not measured. An individual could feel seriously unwell physically or mentally, which could as well contribute to a factor for analyzing. On the other hand, no other mental health issues other than depression was being studied in the paper; different kinds of mental health issues could contributes to physical unwellness in different ways, further research could include those variables for a better narrative of the relationship. 
+There are many limitations and weaknesses in the analysis. For instance, counted days of feeling physically and mentally unwell in the past 30 days might not fully capture an individual's mental and physical health status; although feeling unwell in a few days, the severity of the unwellness was not measured. An individual could feel seriously unwell physically or mentally, which could also contribute to a factor for analyzing. On the other hand, no mental health issues other than depression were studied in the paper; different kinds of mental health issues could contribute to physical unwellness in different ways, further research could include those variables for a better narrative of the relationship. 
 
 As mentioned before, the variables that are used for the main analysis were only available in the years 2002, 2006, 2010, 2014, 2018, and 2022; the gap between years in the dataset fails to illustrate the trends as its narrative lacks data from the other years. Moreover, not enough education on mental health could also influence the variables we collected, based on the fact that the variables are collected in a self-report manner. Participants might report inaccurate information due to not having mental health-related knowledge. On the other hand, the disparity in gender and other minority groups could influence the variable validity as those groups are more likely to be underrepresented in medical research. There is still much room for improvement. 
 
-Lastly, by posterior predictive check, the posterior distribution indicates that the model is not doing a good job of fitting the data. The check result could be due to limitations of data mentioned above; furthermore, adding more relevant variables to the linear regression equation could as well improve the strength of the model.
+Lastly, by posterior predictive check, the posterior distribution indicates that the model is not doing a good job of fitting the data. The check result could be due to limitations of the data mentioned above; furthermore, adding more relevant variables to the linear regression equation could as well improve the strength of the model.
 
 There are still many mental and physical health factors that we did not touch on to study their relationship in deeper depth. With existing studies and limitations concluded, future studies could be conducted to improve and capture the relationship between mental and physical health more efficiently in the future. 
- 
+
 
 \appendix
 
@@ -606,7 +604,7 @@ There are still many mental and physical health factors that we did not touch on
 
 ### Posterior predictive check
 
-In @fig-ppcheckandposteriorvsprior, we implement a posterior predictive check and compared the posterior with the prior. By definition, the posterior should be able to be used to simulate data similar to the actual data; however, the posterior simulated data barely recollect the characteristic of the dataset from GSS. This means that the model lack of strength in terms of the relationship. The weakness could be a result of data limitations mentioned in [Discussion]. 
+In @fig-ppcheckandposteriorvsprior, we implement a posterior predictive check and compare the posterior with the prior. By definition, the posterior should be able to be used to simulate data similar to the actual data; however, the posterior simulated data barely recollects the characteristics of the dataset from GSS. This means that the model lacks strength in terms of the relationship. The weakness could be a result of data limitations mentioned in [Discussion]. 
 
 ```{r}
 #| eval: true
@@ -615,7 +613,7 @@ In @fig-ppcheckandposteriorvsprior, we implement a posterior predictive check an
 #| warning: false
 #| label: fig-ppcheckandposteriorvsprior
 #| layout-ncol: 2
-#| fig-cap: "The Model Fits Barely to the Data, Hinting A Weak Model for Explaining the circumstances"
+#| fig-cap: "The Model Fits Barely to the Data, Hinting A Weak Model for Explaining the Circumstances"
 #| fig-subcap: ["Posterior prediction check", "Comparing the posterior with the prior"]
 
 pp_check(first_model) +
@@ -631,7 +629,7 @@ posterior_vs_prior(first_model) +
 \break
 ### Diagnostics
 
-@fig-stanareyouokay-1 is a trace plot. It shows lines bouncing around horizontally and have a nice overlap between the chains. @fig-stanareyouokay-2 is a Rhat plot. From the plot, $\hat{R} = 1.05$, which is very close to 1, and ideally no more than 1.1.  These results suggest no problems in model we built for our paper.
+@fig-stanareyouokay-1 is a trace plot. It shows lines bouncing around horizontally and has a nice overlap between the chains. @fig-stanareyouokay-2 is a Rhat plot. From the plot, $\hat{R} = 1.05$, which is very close to 1, and ideally no more than 1.1.  These results suggest no problems in the model we built for our paper.
 
 ```{r}
 #| echo: false
