--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -474,7 +474,7 @@ mentalVsHealth|>
 
 With linear regression model analysis, the result in @fig-mental-vs-physical shows that counted days of feeling mentally unwell are positively correlated to counted days of feeling physically unwell. The diagnosis of depression has a further positive effect on counted days of feeling physically unwell, making the correlation stronger. This result means that individuals with 1) higher counted days of feeling mentally unwell and 2) being diagnosed as having depression tend to report a higher number of days feeling physically unwell. 
 
-Based on @tbl-modelresults, however, although having influences on linear equation in @fig-mental-vs-physical, depression diagnosis's influences on counted days of feeling physically unwell is not significant ($\beta_2$ = −1.43, p = .22). Counted days of feeling mentally unwell, on the other hand, do have a significant positive correlation with counted days of feeling physically unwell ($\beta_1$ = 0.27, p = .01). From @fig-mental-vs-physical, it is evident to state that depression diagnosis may be a moderator to strengthen the relationship between counted ays of mental and physical unwellness in the past 30 days. The lack of significance could be due to possible errors, validity of survey questions, biases, or other possible factors. Hence, even though one of the correlations is not significant, it is still important for us to consider the variable for possible future research.
+Based on @tbl-modelresults, however, although having influences on linear equation in @fig-mental-vs-physical, depression diagnosis's influences on counted days of feeling physically unwell is not significant ($\beta_2$ = 1.44, p = .22). Counted days of feeling mentally unwell, on the other hand, do have a significant positive correlation with counted days of feeling physically unwell ($\beta_1$ = 0.27, p = .01). From @fig-mental-vs-physical, it is evident to state that depression diagnosis may be a moderator to strengthen the relationship between counted ays of mental and physical unwellness in the past 30 days. The lack of significance could be due to possible errors, validity of survey questions, biases, or other possible factors. Hence, even though one of the correlations is not significant, it is still important for us to consider the variable for possible future research.
 
 ```{r}
 #| label: fig-mental-vs-physical
@@ -504,8 +504,8 @@ analysis_data|>
 
 library(rstanarm)
 
-first_model <-
-  readRDS(file = here::here("models/first_model.rds"))
+model <-
+  readRDS(file = here::here("models/model.rds"))
 ```
 
 ```{r}
@@ -517,7 +517,7 @@ first_model <-
 
 modelsummary::modelsummary(
   list(
-    "First model" = first_model
+    "Model" = model
   ),
   statistic = "mad",
   fmt = 2
@@ -616,11 +616,11 @@ In @fig-ppcheckandposteriorvsprior, we implement a posterior predictive check an
 #| fig-cap: "The Model Fits Barely to the Data, Hinting A Weak Model for Explaining the Circumstances"
 #| fig-subcap: ["Posterior prediction check", "Comparing the posterior with the prior"]
 
-pp_check(first_model) +
+pp_check(model) +
   theme_classic() +
   theme(legend.position = "bottom")
 
-posterior_vs_prior(first_model) +
+posterior_vs_prior(model) +
   theme_minimal() +
   scale_color_brewer(palette = "Set1") +
   theme(legend.position = "bottom") +
@@ -641,9 +641,9 @@ posterior_vs_prior(first_model) +
 #| fig-subcap: ["Trace plot", "Rhat plot"]
 #| layout-ncol: 2
 
-plot(first_model, "trace")
+plot(model, "trace")
 
-plot(first_model, "rhat")
+plot(model, "rhat")
 ```
 
    
